# xlExtractor

./: CLAUDE.md  README.md  pyproject.toml
src/xlextractor/: __init__.py  _types.py  columns.py  parsers.py  transforms.py  worksheet.py
tests/: test_columns.py  test_parsers.py  test_transforms.py  test_worksheet.py
